0.1740
    - added EXPERIMENTAL q method
    - execute method id option is DEPRECATED!
0.1739
    - insert timestamp option is DEPRECATED!
      use created_at option with now attribute
    - update timestamp option is DEPRECATED!
      use updated_at option wieh now attribute
    - insert_timestamp method is DEPRECATED!
      use now method
    - update_timestamp method is DEPRECATED!
      use use now method
    - added EXPEREIMTNAL now method
    - added EXPERIMENTAL insert created_at option
    - added EXPERIMETNAL insert updated_at option
    - added EXPERIMETNAL update updated_at option
    - added new timestamp system using the above methods and options
0.1738
    - micro optimization
    - removed example that query pass execute method in documentation
      this is many bug reason much more than I have expected
      and passing query to execute method is DEPRECATED!
    - insert method id value is not copied to parameter
      if the key exists in parameter
0.1737
    - micro optimization
    - fixed DEBUG messsage bug
0.1736
    - micro optimization
0.1735
    - added EXPERIMENTAL reuse_query option to execute method
0.1734
    - moved DBIx::Custom::Guide to wiki
0.1733
    - select method join option can receive string.
    - removed DEPRECATED status of select param option
    - select method where_param option is DEPRECATED!
      use where => [STRING, PARAM] syntax instead
    - delete method where_param option is DEPRECATED!
      use where => [STRING, PARAM] syntax instead
    - update method where_param option is DEPRECATED!
      use where => [STRING, PARAM] syntax instead
    - update method param option is DEPRECATED!
    - insert method param option is DEPRECATED!
    - removed argument checking logic because in database performance is more
      important.
0.1732
    - removed EXPERIMETNAL flag from like_value
0.1731
    - removed DEPRECATED status from insert method's id option
    - renamed EXPERIMENTAL insert_or_update to update_or_insert